--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    // Add the following configuration:
     id 'com.huawei.agconnect'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -64,8 +65,20 @@ dependencies {
 
     //Navigation Compose
     implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
     //Auth-Service
     implementation "com.huawei.agconnect:agconnect-core:1.7.3.302"
     implementation "com.huawei.agconnect:agconnect-auth:1.7.2.300"
+
+    //Icons
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+
+    //DI-Hilt
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    kapt "com.google.dagger:hilt-android-compiler:2.38.1"
+
+    //ViewModel in Compose
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+
 }
