--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,19 @@
 buildscript {
     ext {
-        compose_version = '1.1.0-beta01'
+        compose_version = '1.1.0'
     }
     dependencies {
         // Don't forget to add classpath for your build gradle and change gradle plugin version with yours.
         classpath "com.android.tools.build:gradle:7.2.0"
         // Add the AppGallery Connect plugin configuration. You are advised to use the latest plugin version.
         classpath 'com.huawei.agconnect:agcp:1.7.1.300'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.40.1"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 }
 
 task clean(type: Delete) {
