--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
         compose_version = '1.1.0'
+        accompanist_version = '0.12.0'
     }
     dependencies {
         // Don't forget to add classpath for your build gradle and change gradle plugin version with yours.
